Support defining IntervalSchedule in seconds (#796)
* WIP on allowing interval schedule to operate in seconds

Signed-off-by: Craig Perkins <cwperx@amazon.com>

* Support defining IntervalSchedule in seconds

Signed-off-by: Craig Perkins <cwperx@amazon.com>

* Use seconds in bwc test

Signed-off-by: Craig Perkins <cwperx@amazon.com>

* Update runThenListJobs test

Signed-off-by: Craig Perkins <cwperx@amazon.com>

* Consistent create watcher job

Signed-off-by: Craig Perkins <cwperx@amazon.com>

---------

Signed-off-by: Craig Perkins <cwperx@amazon.com>
Signed-off-by: Jeremy Dupras <jdupras@amazon.com>